# Embedded-System-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
BaseControl/Connectivity/CAN/: CAN.cpp  FDCAN.cpp
BaseControl/Connectivity/I2C/: I2C.cpp
BaseControl/Connectivity/SPI/: SPI.cpp
BaseControl/Connectivity/UART/: DBUS.cpp  UART.cpp
BaseControl/Controller/: adrcController.cpp
BaseControl/Motor/: DM4310.cpp  Motor.cpp  RM3508.cpp  UnitreeA1.cpp
BaseControl/Sensor/BMI088/: BMI088.cpp
BaseControl/Sensor/IST8310/: IST8310.cpp
Math/: Trigonometric.cpp
Utils/: buzzer.cpp  note.cpp
include/BaseControl/Connectivity/: Connectivity.hpp
include/BaseControl/Connectivity/CAN/: CAN.hpp  FDCAN.hpp
include/BaseControl/Connectivity/I2C/: I2C.hpp
include/BaseControl/Connectivity/SPI/: SPI.hpp
include/BaseControl/Connectivity/UART/: UART.hpp
include/BaseControl/Controller/: adrcController.hpp  lqrController.hpp
include/BaseControl/Motor/: DM4310.hpp  Motor.hpp  RM3508.hpp  UnitreeA1.hpp  UnitreeA1protocol.hpp
include/BaseControl/Sensor/BMI088/: BMI088.hpp
include/BaseControl/Sensor/IST8310/: IST8310.hpp
include/Math/: Matrix.hpp  Trigonometric.hpp
include/Utils/: Status.hpp  buzzer.hpp  music.hpp  note.hpp
